--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>PrimeNG TableProductsDemo</title>
+        <title>inventory-management</title>
         <base href="/">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://unpkg.com/primeflex/primeflex.css" rel="stylesheet" />
         <link href="https://unpkg.com/primeicons/primeicons.css" rel="stylesheet" />
         <link href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css" rel="stylesheet" />
-        <link rel="icon" type="image/x-icon" href="https://primefaces.org/cdn/primeng/images/favicon.png">
+
     </head>
     <body>
         <app-inventory-management></app-inventory-management>
